# anb-rising-stars-showcase

./: .gitignore  Escenario 1 - Capacidad de la capa Web (usuarios concurrentes).md  README.md  docker-compose.yml  sonar-project.properties  test_workflow_trigger.py
.github/: WORKFLOWS_README.md
.github/workflows/: ci.yml  docker-integration.yml  release.yml  sonarqube.yml  test-validation.yml
api/: .coveragerc  .env.local.example  API_USAGE.md  Dockerfile  README.md  alembic.ini  auth.py  config.py  database.py  database_types.py  dependencies.py  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  run_migrations.py  run_tests.py  schemas.py  start.sh
api/alembic/: env.py
api/alembic/versions/: 7b82ec836402_initial_migration_with_uuid_models.py
api/models/: db_models.py
api/routers/: auth.py  public.py  videos.py
api/schemas/: pydantic_schemas.py
api/services/: auth_service.py  cache_service.py  ranking_service.py  video_service.py  vote_service.py
api/tests/: .sonarqube-ignore  conftest.py  test_auth_endpoints.py  test_database.py  test_public_endpoints.py  test_ranking_endpoints.py  test_video_endpoints.py  test_vote_endpoints.py
api/tests/unit/: test_auth.py  test_auth_service.py  test_config.py  test_models.py  test_video_service.py
aws/ec2/: initial-configuration.md
aws/ec2/api/: run-instructions.md
aws/ec2/nextcloud/: Dockerfile  run-instructions.md
aws/ec2/nginx/: run-instructions.md
aws/ec2/postgres/: Dockerfile  run-instructions.md
aws/ec2/postgres/db/: init.sql
aws/ec2/redis/: run-instructions.md
aws/ec2/worker/: run-instructions.md
capacity-planning/web/: plan_de_pruebas3.md  plan_de_pruebas4.md  plan_de_pruebas5.md  plan_de_pruebas_results2.md  plan_de_pruebas_results3.md  plan_de_pruebas_results4.md  plan_de_pruebas_results5.md
capacity-planning/worker/: plan_de_pruebas2.md  plan_de_pruebas3.md  plan_de_pruebas4.md  plan_de_pruebas5.md  plan_de_pruebas_result2.md  plan_de_pruebas_result3.md  plan_de_pruebas_result4.md  plan_de_pruebas_result5.md
collections/: local.postman_environment.json  postman_collection.json
db/: init_data.sql
docs/: C4-Diagrams.md  Entrega_1.md  Entrega_2.md  Entrega_3.md  Entrega_4.md  Entrega_5.md
docs/capscity-planning/web/: Perfonace_Testing_Plan.md
docs/capscity-planning/worker/: Performance_Testing_Plan.md  Performance_Testing_Results.md
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/dashboards/json/: performance-testing.json  video-worker-metrics.json  worker.json
next_cloud/: README.md  backup.sh  docker-compose.yml  entrypoint.sh  env.example  restore.sh  setup.sh  setup_nextcloud_folders.sh
nginx/: Dockerfile  Readme.md  nginx.conf  nginx.conf.template
scripts/: example_test_workflow.sh  redis_stream_test.py  requirements.txt  sqs_queue_test.py
sustentacion/: Entrega_1.md  Entrega_2.md  Entrega_3.md  Entrega_4.md  Entrega_5.md
test_concurrency/: README.md  package-lock.json  package.json  ramp_100_users.js  ramp_200_users.js  ramp_300_users.js  ramp_500_users.js  ramp_progressive.js  ramp_test.js  smoke_test.js  stability_test.js
test_concurrency/results/results4/: results-ramp1.1.txt  results-ramp1.txt  results-ramp2.txt  results-smoke_test.txt
test_concurrency/results/results5/: 100.txt  200.txt  300.txt  500.txt  smoke.txt  stabi.txt
worker/: Dockerfile  README.md  go.mod  go.sum  main.go
worker/cmd/: main.go
worker/configs/: .env  .env.example
worker/internal/adapters/config/: env_config.go
worker/internal/adapters/ffmpeg/: processor.go
worker/internal/adapters/metrics/: prom.go
worker/internal/adapters/nextcloud/: webdav_storage.go
worker/internal/adapters/postgres/: video_repository.go
worker/internal/adapters/redis/: stream_queue.go
worker/internal/adapters/s3/: README.md  s3_storage.go
worker/internal/adapters/sqs/: queue.go
worker/internal/core/domain/: task.go  video.go
worker/internal/core/ports/: message_queue.go  metrics.go  repository.go  storage.go  video_processor.go
worker/internal/core/ports/mocks/: mock_ports.go
worker/internal/core/usecase/: process_video.go  process_video_test.go
